--- a/appointments-doctors-copy.html
+++ b/appointments-doctors-copy.html
@@ -166,13 +166,13 @@
               <li class="active current-page">
                 <a href="appointments-doctors-copy.html">
                   <i class="ri-dossier-line"></i>
-                  <span class="menu-text">Appointment</span>
+                  <span class="menu-text">Appointments Calendar</span>
                 </a>
               </li>
               <li>
                 <a href="appointments-list-doctors-copy.html">
                   <i class="ri-health-book-line"></i>
-                  <span class="menu-text">Appointment List</span>
+                  <span class="menu-text">Appointments List</span>
                 </a>
               </li>
 
