--- a/settings-admin.html
+++ b/settings-admin.html
@@ -168,7 +168,7 @@
                 </a>
                 <ul class="treeview-menu">
                   <li>
-                    <a href="appointments.html">Appointments</a>
+                    <a href="appointments.html">Appointments Calendar</a>
                   </li>
                   <li>
                     <a href="appointments-list.html">Appointments List</a>
